apps/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: /data/media
              name: data
            - mountPath: /config
              name: config
      volumes:
        - name: data
          nfs:
            path: /data/media
            server: 192.168.0.14
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
