apps/media/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  labels:
    name: bazarr
spec:
  tls:
    - hosts:
        - bazarr.internal.vkolobara.com
  rules:
    - host: bazarr.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
